// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalBand should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-vertical-band"
    >
      <rect
        class="rect"
        height="400"
        style="stroke: red; opacity: 0.3; fill: steelblue; pointer-events: none;"
        width="100"
        x="50"
        y="0"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`VerticalBand should render correctly with no xStart 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-vertical-band"
    >
      <rect
        class="rect"
        height="400"
        style="stroke: red; opacity: 0.3; fill: steelblue; pointer-events: none;"
        width="100"
        x="0"
        y="0"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`VerticalBand should render correctly with no xStop 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-vertical-band"
    >
      <rect
        class="rect"
        height="400"
        style="stroke: red; opacity: 0.3; fill: steelblue; pointer-events: none;"
        width="100"
        x="100"
        y="0"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`VerticalBand should render nothing if missing scale 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-vertical-band"
    />
  </svg>
</DocumentFragment>
`;
